--- a/src/pages/phone/phone.html
+++ b/src/pages/phone/phone.html
@@ -28,66 +28,124 @@
 
     <ion-grid>
 
-      <ion-row>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('1')">1</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('2')">2</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('3')">3</button>
-        </ion-col>
-      </ion-row>
+      <div id='divDialPad' *ngIf="dialpadShow">
+        <ion-row>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('1')">1</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('2')">2</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('3')">3</button>
+          </ion-col>
+        </ion-row>
 
-      <ion-row>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('4')">4</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('5')">5</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('6')">6</button>
-        </ion-col>
-      </ion-row>
+        <ion-row>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('4')">4</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('5')">5</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('6')">6</button>
+          </ion-col>
+        </ion-row>
 
-      <ion-row>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('7')">7</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('8')">8</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('9')">9</button>
-        </ion-col>
-      </ion-row>
+        <ion-row>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('7')">7</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('8')">8</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('9')">9</button>
+          </ion-col>
+        </ion-row>
 
-      <ion-row>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('*')">*</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('0')">0</button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block color="dark" round (click)="keypadPress('#')">#</button>
-        </ion-col>
-      </ion-row>
+        <ion-row>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('*')">*</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('0')">0</button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block color="dark" round (click)="keypadPress('#')">#</button>
+          </ion-col>
+        </ion-row>
+      </div>
 
-      <ion-row>
-          <ion-item text-center>
-            <button ion-button color="secondary" round large *ngIf="phone.endpoint.callStatus == 'idle'" (click)="callAsnwer()">
-              <ion-icon name="call"></ion-icon>
-            </button>
-            <button ion-button color="light" round large *ngIf="dialpad.length > 0 && phone.endpoint.callStatus == 'idle'" (click)="dialpadBackspace()">
-              <ion-icon name="backspace"></ion-icon>
-            </button>
-            <button ion-button color="danger" round large *ngIf="phone.endpoint.callStatus !== 'idle'" (click)="endReject()">End ({{ phone.endpoint.callDuration }})</button>
+      <div id='divOnIdleControls' *ngIf="phone.endpoint.callStatus == 'idle'">
+        <ion-row>
+            <ion-item text-center>
+              <button ion-button color="secondary" round large (click)="callAsnwer()">
+                <ion-icon name="call"></ion-icon>
+              </button>
+              <button ion-button color="light" round large *ngIf="dialpad.length > 0" (click)="dialpadBackspace()">
+                <ion-icon name="backspace"></ion-icon>
+              </button>
+            </ion-item>
+        </ion-row>
+      </div>
 
-          </ion-item>
-      </ion-row>
+      <div id='divOnCallControls' *ngIf="phone.endpoint.callStatus !== 'idle'">
+        <ion-row *ngIf="!dialpadShow">
+          <!-- Dialpad controls -->
+          <ion-col>
+            <ion-item text-center>
+              <button ion-button color="dark" round large (click)="dialpadOnOff()">
+                <ion-icon name="keypad"></ion-icon>
+              </button>
+            </ion-item>
+          </ion-col>
+          <!-- Speaker controls -->
+          <ion-col>
+            <ion-item text-center>
+              <!-- Turn on speaker -->
+              <button *ngIf="!speaker" ion-button color="dark" round large (click)="speakerOnOff()">
+                <ion-icon name="volume-up"></ion-icon>
+              </button>
+              <!-- Turn off speaker -->
+              <button *ngIf="speaker" ion-button color="dark" round large (click)="speakerOnOff()">
+                <ion-icon name="volume-off"></ion-icon>
+              </button>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <!-- Mute -->
+        <ion-row *ngIf="!dialpadShow">
+            <ion-item text-center>
+              <!-- Un-mute -->
+              <button *ngIf="mute" ion-button color="dark" round large (click)="muteOnOff()">
+                <ion-icon name="mic"></ion-icon>
+              </button>
+              <!-- Mute -->
+              <button *ngIf="!mute" ion-button color="dark" round large (click)="muteOnOff()">
+                <ion-icon name="mic-off"></ion-icon>
+              </button>
+            </ion-item>
+        </ion-row>
+        <!-- End call hide dialpad -->
+        <ion-row>
+          <!-- Hide dialpad -->
+          <ion-col *ngIf="dialpadShow">
+            <ion-item text-center>
+              <button ion-button color="dark" round large (click)="dialpadOnOff()">
+                <ion-icon name="keypad"></ion-icon>
+              </button>
+            </ion-item>
+          </ion-col>
+          <!-- End phonecall -->
+          <ion-col>
+            <ion-item text-center>
+              <button ion-button color="danger" round large (click)="endReject()">End ({{ phone.endpoint.callDuration }})</button>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </div>
     </ion-grid>
 
   </ion-content>
