--- a/src/pages/callcdr/callcdr.html
+++ b/src/pages/callcdr/callcdr.html
@@ -38,8 +38,11 @@
     </ion-item>
   </ion-list>
 
-  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  <ion-infinite-scroll (ionInfinite)="$event.waitFor(callCdr())">>
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 
 </ion-content>
