--- a/src/pages/callcdr/callcdr.html
+++ b/src/pages/callcdr/callcdr.html
@@ -26,7 +26,7 @@
       </ion-avatar>
       <h2>{{ item.number }} (<span *ngIf="item.direction == 'IN'">Call from</span><span *ngIf="item.direction != 'IN'">Call to</span>)</h2>
       <h3>{{ item.date | date:'short' }}</h3>
-      <p>{{ item.duration }} Min - ${{ item.cost | currency }}</p>
+      <p>{{ item.duration }} Min - {{ item.cost | currency }}</p>
       <p>
         <button ion-button icon-only small (click)="makeCall(item.number)">
           <ion-icon name="call"> Phone call</ion-icon>
@@ -38,7 +38,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-infinite-scroll (ionInfinite)="$event.waitFor(callCdr())">>
+  <ion-infinite-scroll (ionInfinite)="$event.waitFor(callCdr())">
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
       loadingText="Loading more data...">
