--- a/src/pages/callcdr/callcdr.html
+++ b/src/pages/callcdr/callcdr.html
@@ -21,19 +21,29 @@
   <ion-list no-lines>
     <ion-item ion-item *ngFor="let item of cdr">
       <ion-avatar item-start>
-        <!-- <img src="https://voip-communications.net/countries-flags/US.png"> -->
         <img [src]="item.country">
       </ion-avatar>
       <h2>{{ item.number }} (<span *ngIf="item.direction == 'IN'">Call from</span><span *ngIf="item.direction != 'IN'">Call to</span>)</h2>
       <h3>{{ item.date | date:'short' }}</h3>
       <p>{{ item.duration }} Min - {{ item.cost | currency }}</p>
       <p>
-        <button ion-button icon-only small (click)="makeCall(item.number)">
-          <ion-icon name="call"> Phone call</ion-icon>
-        </button>
-        <!-- <button ion-button icon-only small (click)="sendSMS(contact['number'])">
-          <ion-icon name="chatbubbles"> SMS</ion-icon>
-        </button> -->
+        <ion-row>
+          <ion-col *ngIf="item.record != ''">
+            <button ion-button full icon-only small (click)="playPhoneRec(item)">
+              <ion-icon name="recording"></ion-icon>
+            </button>
+          </ion-col>
+          <ion-col>
+            <button ion-button full icon-only small (click)="makeCall(item.number)">
+              <ion-icon name="call"></ion-icon>
+            </button>
+          </ion-col>
+          <!-- <ion-col>
+            <button ion-button full icon-only small (click)="sendSMS(contact['number'])">
+              <ion-icon name="chatbubbles"></ion-icon>
+            </button>
+          </ion-col> -->
+        </ion-row>
       </p>
     </ion-item>
   </ion-list>
