--- a/src/pages/phonesettings/phonesettings.html
+++ b/src/pages/phonesettings/phonesettings.html
@@ -7,12 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>phonesettings</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title><ion-icon name="call"></ion-icon> Phone settings</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+{{ user.endpointInfo | json}}
 </ion-content>
