--- a/src/pages/phone/phone.html
+++ b/src/pages/phone/phone.html
@@ -23,9 +23,9 @@
       <ion-icon name="add"></ion-icon>
     </button>
     <ion-fab-list side="botton">
-      <!-- <button ion-fab (click)="loadPhoneSettingsPage(fab)">
+      <button ion-fab (click)="loadPhoneSettingsPage(fab)">
         <ion-icon name="cog"></ion-icon>
-      </button> -->
+      </button>
       <button ion-fab (click)="loadCallCdrPage(fab)">
         <ion-icon name="list"></ion-icon>
       </button>
