Menu adaptado a ios version

--- a/src/pages/phone/phone.html
+++ b/src/pages/phone/phone.html
@@ -18,7 +18,7 @@
 
 <ion-content padding>
 
-  <ion-fab top right edge *ngIf="phone.endpoint.callStatus == 'idle'" #fab>
+  <!-- <ion-fab top right edge *ngIf="phone.endpoint.callStatus == 'idle'" #fab>
     <button ion-fab color="light">
       <ion-icon name="add"></ion-icon>
     </button>
@@ -30,7 +30,7 @@
         <ion-icon name="list"></ion-icon>
       </button>
     </ion-fab-list>
-  </ion-fab>
+  </ion-fab> -->
 
     <ion-list>
 
