--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs >
   <ion-tab [root]="tab1Root" tabTitle="Phone" tabIcon="call"></ion-tab>
-  <!-- <ion-tab [root]="tab2Root" tabTitle="SMS" tabIcon="chatbubbles"></ion-tab> -->
+  <ion-tab [root]="tab2Root" tabTitle="History" tabIcon="list"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contacts" tabIcon="contacts"></ion-tab>
 </ion-tabs>
