--- a/src/pages/phonesettings/phonesettings.html
+++ b/src/pages/phonesettings/phonesettings.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title><ion-icon name="call"></ion-icon> Phone call settings</ion-title>
+    <ion-title>Phone call settings</ion-title>
   </ion-navbar>
 
 </ion-header>
