--- a/src/pages/billing/billing.html
+++ b/src/pages/billing/billing.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title><ion-icon name="cash"></ion-icon> Billing</ion-title>
+    <ion-title>Billing</ion-title>
   </ion-navbar>
 
 </ion-header>
