--- a/src/pages/callcdr/callcdr.html
+++ b/src/pages/callcdr/callcdr.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title><ion-icon name="list"></ion-icon> History</ion-title>
+    <ion-title>History</ion-title>
   </ion-navbar>
 
 </ion-header>
