--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title><ion-icon name="contacts"></ion-icon> Contacts</ion-title>
+    <ion-title>Contacts</ion-title>
   </ion-navbar>
 
 </ion-header>
