--- a/src/pages/phone/phone.html
+++ b/src/pages/phone/phone.html
@@ -21,6 +21,7 @@
     <ion-list>
 
       <ion-item>
+        <ion-label color="primary">{{ callAsCountry }}</ion-label>
         <ion-input type="text" placeholder="Enter phone number" [(ngModel)]="dialpad" disabled="true"></ion-input>
         <button item-right round *ngIf="phone.endpoint.callStatus == 'idle' && dialpad.length > 0" (click)="dialpadBackspace()">
             <ion-icon name="backspace"></ion-icon>
@@ -81,10 +82,16 @@
         </ion-row>
 
         <ion-row *ngIf="phone.endpoint.callStatus == 'idle'">
-            <ion-col text-center>
+            <ion-col col-4 text-center>
               <button ion-button color="secondary" round large (click)="callAsnwer()">
                 <ion-icon name="call"></ion-icon>
               </button>
+            </ion-col>
+            <ion-col col-8>
+                <ion-select [(ngModel)]="callAsCountry" [selectOptions]="countrySelectOptions" >
+                  <ion-option value="">Add country code</ion-option>
+                  <ion-option *ngFor="let item of countries" [value]="item.e164">{{ item.name }}</ion-option>
+                </ion-select>
             </ion-col>
         </ion-row>
 
