Listo para continuar con user profile

--- a/src/pages/chkrates/chkrates.html
+++ b/src/pages/chkrates/chkrates.html
@@ -24,7 +24,7 @@
       </ion-select>
     </ion-item>
     <ion-item>
-      <ion-label>Phone number:</ion-label>
+      <ion-label>Phone number: {{ country }}</ion-label>
       <ion-input type="number" placeholder="Enter phone number" [(ngModel)]="dialpad"></ion-input>
     </ion-item>
     <ion-item>
