Profile screen ok

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -34,7 +34,7 @@
 
           Don't have an account?
           <button ion-button block color="light" (click)="goToRegister()">Register</button>
-          Register and get $1 in credits to use our services.
+          <a href="https://voip-communications.net/vcw/user-lost-password">Forgot your password?</a>
         </p>
     </ion-card-content>
   </ion-card>
