--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -39,12 +39,8 @@
 
   </ion-list>
 
-  <button ion-button block (click)="register(registerForm)">Register</button>
-  <button ion-button block color='light' (click)='returnToLogin()'>Cancel</button>
-
-  <br/>
-  <h3>for more information go to</h3>
-  <h2><a href="https://voip-communications.net">voip-communications.net</a></h2>
+  <button ion-button block round (click)="register(registerForm)">Register</button>
+  <!-- <button ion-button block color='light' (click)='returnToLogin()'>Cancel</button> -->
 
 </form>
 </ion-content>
