--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs >
   <ion-tab [root]="tab1Root" tabTitle="Phone" tabIcon="call"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="History" tabIcon="list"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contacts" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Messages" tabIcon="chatbubbles"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="History" tabIcon="list"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Contacts" tabIcon="contacts"></ion-tab>
 </ion-tabs>
